--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -5,4 +5,4 @@ output:
     toc: false
 ---
 
-Describe your project.
+This repository contains scripts related to the empirical analyses of 1000 Genome dataset and LD Patterns.
