--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -7,6 +7,8 @@ output:
 
 This repository contains scripts related to the empirical analyses of 1000 Genome dataset.
 
+Click on this [link](first-analysis.html) to see Week 1 Work (Gathering and Subsetting Data).
+
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
