Escaped Dollar Sign so It was not evaluated by R

--- a/analysis/first-analysis.Rmd
+++ b/analysis/first-analysis.Rmd
@@ -97,6 +97,7 @@ NRE outputs a whole file with all chromsomes together. Run
 
 > R split_NRE_Results_Chrom.R
 
+Output will be NRE Results but split by chromosome. 
 
 ###Process the output after running neutral region explorer program 
 
